--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ext-json": "*",
         "symfony/framework-bundle": "^7.0",
         "symfony/property-access": "^7.0",
+        "symfony/security-bundle": "^7.0",
         "symfony/serializer": "^7.0"
     },
     "require-dev": {
