--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "sofyco/json-request-bundle",
     "type": "symfony-bundle",
+    "version": "3.0.0",
     "description": "Symfony JSON Request Bundle",
     "keywords": ["php", "symfony", "http", "json", "request", "bundle"],
     "homepage": "https://github.com/sofyco/json-request-bundle",
@@ -12,17 +13,17 @@
         }
     ],
     "require": {
-        "php": "^8.3",
+        "php": "^8.5",
         "ext-json": "*",
-        "symfony/framework-bundle": "^7.0",
-        "symfony/property-access": "^7.0",
-        "symfony/security-bundle": "^7.0",
-        "symfony/serializer": "^7.0"
+        "symfony/framework-bundle": "^8.0",
+        "symfony/property-access": "^8.0",
+        "symfony/security-bundle": "^8.0",
+        "symfony/serializer": "^8.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^10.5",
-        "symfony/browser-kit": "^7.0"
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^12.4",
+        "symfony/browser-kit": "^8.0"
     },
     "autoload": {
         "psr-4": {
